Improve visibility of start/stop icons

--- a/src/ui/Panel.css
+++ b/src/ui/Panel.css
@@ -192,6 +192,6 @@
 }
 
 .panel-button i {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1;
 }
